# Download_Tools

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  CREDITS.md  README.md  __init__.py  check_install.ps1  claude_desktop_config_sample.json  install.ps1  mcp_web_scraper_server.py  pyproject.toml  requirements.txt  setup_external_integration.py  web_scraper_cli.py
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
Docs/: INSTAGRAM_HANDLER.md  INSTAGRAM_OPTIMIZATION.md  MCP_INTEGRATION_GUIDE.md  WEB_SCRAPER_FIX_SUMMARY.md  WebFileScraperNode_v081.md  YOUTUBE_YTDLP_ENHANCEMENT.md  playwright_docs.md  scrapling_docs.md  scrapling_docs_system.md
configs/: auth_config.json.example  gallery-dl.conf.example  instagram_cookies.json.example  yt-dlp-audio.conf  yt-dlp-hq.conf  yt-dlp.conf  yt-dlp.conf.example
configs/web_scraper/: README.md
nodes/: gallery_dl_downloader.py  web_image_scraper_v082.py  yt_dlp_downloader.py
site_handlers/: 500px_handler.py  __init__.py  artstation_handler.py  artsy_handler.py  base_handler.py  behance_handler.py  bellazon_handler.py  bsky_handler.py  cosmos_handler.py  deviantart_handler.py  flickr_handler.py  generic_handler_with_auth.py  google_arts_handler.py  instagram_handler.py  kavyar_handler.py  modelmayhem_handler.py  pinterest_handler.py  portfolio_handler.py  reddit_handler.py  tumblr_handler.py  unsplash_handler.py  wix_handler.py  wordpress_handler.py  youtube_handler.py  youtube_handler_ytdlp.py
utils/: __init__.py  persistent_settings.py
