[project]
name = "comfyui-download-tools"
description = "ComfyUI custom nodes for large-scale media downloading via gallery-dl, yt-dlp, and advanced web scrapers. Download from 1000+ sites including Instagram, Reddit, Twitter, YouTube, TikTok, DeviantArt, Pixiv, and more."
readme = "README.md"
version = "0.8.4"
license = { file = "LICENSE.md" }
requires-python = ">=3.10"
keywords = [
    "comfyui",
    "download",
    "gallery-dl",
    "yt-dlp",
    "web-scraper",
    "instagram",
    "youtube",
    "twitter",
    "reddit",
    "tiktok",
    "deviantart",
    "pixiv",
    "media",
    "video",
    "image"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: End Users/Desktop",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Multimedia :: Graphics",
    "Topic :: Multimedia :: Video",
    "Topic :: Internet :: WWW/HTTP"
]
dynamic = ["dependencies"]

[[project.authors]]
name = "Eric Hiss"
email = "eric@historic.camera"

[tool.setuptools.dynamic]
dependencies = { file = ["requirements.txt"] }

[project.urls]
Repository = "https://github.com/EricRollei/Download_Tools"
Documentation = "https://github.com/EricRollei/Download_Tools/tree/main/Docs"
"Bug Tracker" = "https://github.com/EricRollei/Download_Tools/issues"

[tool.comfy]
PublisherId = "ericrollei"
DisplayName = "Download Tools"
Icon = ""
includes = []

[tool.comfy.dependencies]
gallery-dl = ">=1.26.0"
yt-dlp = ">=2023.12.0"
playwright = ">=1.40.0"
